force-app/main/default/objects/prox__Prodigy_Data_table_Column__mdt/prox__Prodigy_Data_table_Column__mdt.object-meta.xml
<CustomObject>
    <label>Prodigy Data table Column</label>
    <pluralLabel>Prodigy Data table Columns</pluralLabel>
</CustomObject>