force-app/main/default/objects/prox__Prodigy_Data_table_Column__mdt/fields/prox__Column_Label__c.field-meta.xml
<CustomField>
    <fullName>prox__Column_Label__c</fullName>
    <label>Column Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>