force-app/main/default/objects/prox__Prodigy_Data_table_Column__mdt/fields/prox__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>prox__Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>