force-app/main/default/objects/prox__Prodigy_Data_table_Column__mdt/fields/prox__Editable__c.field-meta.xml
<CustomField>
    <fullName>prox__Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>