force-app/main/default/objects/prox__Prodigy_Data_table_Column__mdt/fields/prox__Prodigy_Data_Table__c.field-meta.xml
<CustomField>
    <fullName>prox__Prodigy_Data_Table__c</fullName>
    <label>Prodigy Data Table</label>
    <referenceTo>prox__Prodigy_Data_Table__mdt</referenceTo>
    <relationshipLabel>Prodigy Data table Columns</relationshipLabel>
    <relationshipName>Prodigy_Data_table_Columns</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>